[package]
name = "img-magicks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.22.0", features = ["serde", "wayland", "persistence"] }
egui = "0.22.0"
egui_extras = { version = "0.22.0", features = ["image"] }
image = "0.24.6"
rand = { version = "0.8.5", features = ["small_rng"] }
rfd = "0.11.4"
serde = { version = "1.0.164", features = ["derive"] }
